# Bitcoinn

./: README.md
bitcoin-cli-rs/: Cargo.toml
bitcoin-cli-rs/src/: cli.rs  commands.rs  config.rs  error.rs  main.rs  models.rs  rpc.rs
